[tool.poetry]
name = "tictactoe"
version = "1.0"
description = "Tic-tac-toe RL Contest for Master students"
authors = ["Pierre Girardeau <pgirardeau@crossdata.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
pandas = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
